--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "openai": "^4.68.4",
     "pg": "^8.13.0",
     "slack-bolt": "^1.6.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "ts-node": "^10.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
