--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.13.0",
     "slack-bolt": "^1.6.2",
     "zod": "^3.23.8",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
