--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "postinstall": "tsc"
+    "postinstall": "tsc",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "engines": { "node": "22.6.0" },
   "keywords": [],
