--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "engines": { "node": "22.6.0" },
+  "engines": { "node": "22.x" },
   "keywords": [],
   "author": "",
   "license": "ISC",
