--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "slack-bolt": "^1.6.2",
     "zod": "^3.23.8",
     "ts-node": "^10.8.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "express": "^4.21.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
