--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "postinstall": "tsc",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "heroku-postbuild": "npm run build"
   },
   "engines": { "node": "22.x" },
   "keywords": [],
